--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,7 +5,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.aim.app</groupId>
-	<artifactId>ProjectSetupTemplate</artifactId>
+	<artifactId>RMIClient</artifactId>
 	<packaging>jar</packaging>
 	<version>0.1.0</version>
 
@@ -33,7 +33,7 @@
 
 
 	<build>
-		<finalName>ProjectSetupTemplate</finalName>
+		<finalName>RMIClient</finalName>
 		<!-- surefire plugin -->
 		<plugins>
 			<plugin>
